--- a/package.json
+++ b/package.json
@@ -6,21 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "db:generate": "drizzle-kit generate",
-    "db:push": "drizzle-kit push"
+    "lint": "eslint"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "@neondatabase/serverless": "^1.0.2",
     "@upstash/redis": "^1.36.2",
     "@vercel/blob": "^2.3.0",
     "bcryptjs": "^3.0.3",
     "date-fns": "^4.1.0",
-    "drizzle-orm": "^0.45.1",
     "framer-motion": "^12.34.3",
     "jose": "^6.1.3",
     "lucide-react": "^0.575.0",
+    "mongoose": "^9.2.2",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
@@ -36,7 +33,6 @@
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "dotenv": "^17.3.1",
-    "drizzle-kit": "^0.31.9",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
